# auto-log-test

./: CMakeLists.txt  logger.sh  package.xml
include/: logging_test.h  logging_test2.h
launch/: logging.launch
logs/: latest
src/: logging_test.cpp  logging_test2.cpp
